grud disciplined
