# models/disciplinedModel.js
@@ -1,0 +1,15 @@
+const mongoose = require("mongoose");
+
+const disciplinedSchema = new mongoose.Schema(
+    {
+        label: {
+            type: String,
+            required: [true, "label is required"]
+        },
+        icon : String 
+    },
+    {   timestamps: true 
+    }
+    );
+
+module.exports = mongoose.model("Disciplined", disciplinedSchema);
